# ChangeLog for dev-libs/dietlibc
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/dietlibc/ChangeLog,v 1.75 2008/08/29 17:08:33 hollow Exp $

*dietlibc-0.32_pre20080829 (29 Aug 2008)

  29 Aug 2008; Benedikt Böhm <hollow@gentoo.org>
  +dietlibc-0.32_pre20080829.ebuild:
  new snapshot wrt #227429

  14 Mar 2008; Benedikt Böhm <hollow@gentoo.org> metadata.xml:
  fix metadata

*dietlibc-0.31_pre20070612 (12 Jun 2007)

  12 Jun 2007; Benedikt Böhm <hollow@gentoo.org>
  -dietlibc-0.31_pre20070611.ebuild, +dietlibc-0.31_pre20070612.ebuild:
  another prerelease; should fix #181261

*dietlibc-0.31_pre20070611 (11 Jun 2007)

  11 Jun 2007; Benedikt Böhm <hollow@gentoo.org>
  +dietlibc-0.31_pre20070611.ebuild:
  custom tarball with patches already included, see
  http://svn.linux-vserver.org/projects/dietlibc/

  23 May 2007; Raúl Porcel <armin76@gentoo.org> dietlibc-0.30-r2.ebuild:
  alpha stable wrt #179408

  23 May 2007; Jeroen Roovers <jer@gentoo.org> dietlibc-0.30-r2.ebuild:
  Stable for HPPA (bug #179408).

  22 May 2007; Christian Heim <phreak@gentoo.org>
  dietlibc-0.31_pre20070503.ebuild:
  Removing the MAKEOPTS override, seems to work now.

*dietlibc-0.31_pre20070503 (03 May 2007)

  03 May 2007; Benedikt Böhm <hollow@gentoo.org> -files/gcc-33.patch,
  -files/0.25-gcc34.patch, -dietlibc-0.25.ebuild, -dietlibc-0.29.ebuild,
  +dietlibc-0.31_pre20070503.ebuild:
  add pre release for new SSP stuff; remove old cruft where possible

  20 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  dietlibc-0.30-r2.ebuild:
  Stable on sparc

  21 Jan 2007; Benedikt Böhm <hollow@gentoo.org> dietlibc-0.30-r2.ebuild:
  fix #163059

  20 Jan 2007; Christian Heim <phreak@gentoo.org> dietlibc-0.30-r2.ebuild:
  Moving dietlibc-0.30-r2 stable on amd64 and x86.

  16 Oct 2006; Jason Wever <weeve@gentoo.org> dietlibc-0.30.ebuild:
  Stable on SPARC.

  24 Sep 2006; Michael Hanselmann <hansmi@gentoo.org> dietlibc-0.30.ebuild: