@@ -17,6 +17,6 @@ EBUILD dietlibc-0.30-r2.ebuild 1495 RMD160 ff2129e72221ba0c48af10c1a7914d3d75635
 EBUILD dietlibc-0.30.ebuild 1313 RMD160 20799b3ac51920bc5b3f9fd8216ce3cd72d690d4 SHA1 4bf3749e2c24bb186fde24104dab8b21b5762b01 SHA256 dc11441e50be541b55358f24d8a4c092968938d0c546bc905cf39b5b8416866c
 EBUILD dietlibc-0.31_pre20070503.ebuild 1298 RMD160 9f2116ff75aa459aa8eed8c8c949f215651bdc06 SHA1 1d896abcc24649c07479b5a8e389d79e9a6a2018 SHA256 efdf8797dff9281e245c0dd90f15541bd9da70ba62f6416d1507279edbb998a5
 EBUILD dietlibc-0.31_pre20070612.ebuild 1176 RMD160 1bde563ab5cd747785707655f646bffccf786d7e SHA1 5ac8a93fe709a45357387c02a2f8bd18ad5bedd3 SHA256 b6f2e7995a63cd6bfd1e3662bea134af3a63ceffb3837c8d89103ce35727c42c
-EBUILD dietlibc-0.32_pre20080829.ebuild 1365 RMD160 e93a71b80cb908c964448dd9f3e45000d01aecfa SHA1 a78d3528ba536cca4145bbe80e35bd06e275da4b SHA256 f147d6de8508b5da9bd7b1b9390ed9aa9a57353f6218c4693cf58ce5d292e1f1
-MISC ChangeLog 10962 RMD160 ab4ea6c4ee8f081f4cf698a90ba597150515d455 SHA1 bbcc2be8480892728d06121cb43dd20a8b071729 SHA256 7823fa8d736d4f20e8c30fa8601f9ecacc0097a2ecbeb68697c2d5bc0fe787d7
+EBUILD dietlibc-0.32_pre20080829.ebuild 1373 RMD160 49d84510234fb19f17b8568895a6b2e9b918a940 SHA1 508ebf864cf88fff8def912f32ca78bf8ce5814e SHA256 88ab1e00d78818485cc942bbc66002860c3fad1a6faa8be19682c15548314450
+MISC ChangeLog 11063 RMD160 8ff9e37451e76d98b1741d3d492b54e015c3e413 SHA1 ea95cac6b7be6578b02eda43d0cff6a674eab072 SHA256 17e1fff7a52dc177ef1df9fb8b9fa88563039df0b382fece027beca1cbc45357
 MISC metadata.xml 410 RMD160 063e81d4d38be2fa6f093828b42a0ee3e5b2b582 SHA1 e73d09647dcac3413d7bccb6f1d2a0bc50e60f48 SHA256 3fc38345f9430d71c6369f84fc1b6248bc8aa0ec74cb4ae5b2797fe01cf48721
